Adds some styling
- Custom fonts
- Header x Bio
- Better componentization
- Moves src files to src/ folder

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.6;
   font-size: 18px;
 }
@@ -12,8 +11,16 @@ body {
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900;
+}
+
 a {
-  color: #0070f3;
+  color: #2980b9ff;
   text-decoration: none;
 }
 
