--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,9 +14,17 @@ body {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5 {
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
+}
+
+blockquote {
+  margin: 1em 0;
+  padding: 0.75rem 1rem;
+  background: #ebf6ff;
+  border-left: 0.3rem solid #5aa8ff;
 }
 
 a {
