--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,3 +1,4 @@
+/* Fonts CSS and .woff taken from Google Fonts*/
 /* Poppins latin */
 @font-face {
   font-family: 'Poppins';
@@ -12,6 +13,8 @@
 }
 
 /* Roboto latin */
+
+/* Normal weight*/
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -19,6 +22,18 @@
   font-display: swap;
   src: local('Roboto'), local('Roboto-Regular'),
     url(/fonts/roboto-400-l.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+/* Roboto 700 weight (bold) */
+@font-face {
+  font-display: swap;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  src: url(/fonts/roboto-700-l.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
