--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,50 @@ h5 {
   font-weight: 900;
 }
 
+strong {
+  font-weight: 700;
+}
+
+table {
+  border-collapse: collapse;
+  font-size: inherit;
+  margin: 0;
+  min-width: 25rem;
+  width: 100%;
+}
+
+tr {
+  background: transparent;
+  border-bottom: 1px solid #dadce0;
+  border-top: 0;
+  height: 48px;
+}
+
+td {
+  line-height: 1.5;
+  padding: 0.5rem 1rem 0.5rem 0;
+}
+
+/* for image caption */
+img + em {
+  margin-top: 0.5em;
+  color: dimgrey;
+  font-style: normal;
+  display: inherit;
+  text-align: center;
+  font-size: 85%;
+}
+
+/* for table caption */
+table + p {
+  margin-top: 0.5em;
+  color: dimgrey;
+  font-style: normal;
+  display: inherit;
+  text-align: center;
+  font-size: 85%;
+}
+
 blockquote {
   margin: 1em 0;
   padding: 0.75rem 1rem;
