Third Post 🌟: Start Tackling Web Performance
This starts the Start Tackling Web Performance series of posts.
Also added a `drafts/` folder with what I think would be a good
next post.

This will focus on the first steps I gather should be the first
ones.

Current State: For Review

Extra:
- Adds authors to posts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,6 +80,21 @@ a:hover {
   text-decoration: underline;
 }
 
+.anchor {
+  stroke: #007faa;
+  margin-left: -26px;
+  padding-right: 6px;
+  visibility: hidden;
+}
+
+h2 .anchor {
+  visibility: hidden;
+}
+
+h2:hover .anchor {
+  visibility: visible;
+}
+
 img {
   max-width: 100%;
   display: block;
