Adding Discuss on Twitter and Edit on Github
This adds those two links to the bottom of each post. Also adds
the bio back at the end of the post

--- a/src/pages/posts/post.module.css
+++ b/src/pages/posts/post.module.css
@@ -1,3 +1,8 @@
-.backToHome {
-  margin: 3rem 0 0;
+.postAside {
+  margin: 4rem 0 0;
+}
+
+.postFooter {
+  text-align: right;
+  margin-top: 2rem;
 }
