Typos + Appears In section
Adds an appears in section for internal linking

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,6 +87,12 @@ a:hover {
   visibility: hidden;
 }
 
+hr {
+  border: 0;
+  border-bottom: 1px dashed #ccc;
+  background: #999;
+}
+
 h2 .anchor {
   visibility: hidden;
 }
