--- a/src/pages/posts/post.module.css
+++ b/src/pages/posts/post.module.css
@@ -1,8 +1,12 @@
 .postAside {
-  margin: 4rem 0 0;
+  margin: 3rem 0 0;
 }
 
 .postFooter {
   text-align: right;
   margin-top: 2rem;
+}
+
+.appearsIn {
+  margin: 0.2rem 0 0 0;
 }
