Third Post 🌟: Start Tackling Web Performance (#7)
* Third Post 🌟: Start Tackling Web Performance

This starts the Start Tackling Web Performance series of posts.
Also added a `drafts/` folder with what I think would be a good
next post.

This will focus on the first steps I gather should be the first
ones.

Current State: For Review

Extra:
- Adds authors to posts

* Fix typo and improve wording

* Adding Discuss on Twitter and Edit on Github

This adds those two links to the bottom of each post. Also adds
the bio back at the end of the post

* Typos + Appears In section

Adds an appears in section for internal linking

--- a/src/pages/posts/post.module.css
+++ b/src/pages/posts/post.module.css
@@ -1,3 +1,12 @@
-.backToHome {
+.postAside {
   margin: 3rem 0 0;
+}
+
+.postFooter {
+  text-align: right;
+  margin-top: 2rem;
+}
+
+.appearsIn {
+  margin: 0.2rem 0 0 0;
 }
