--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,6 +80,27 @@ a:hover {
   text-decoration: underline;
 }
 
+.anchor {
+  stroke: #007faa;
+  margin-left: -26px;
+  padding-right: 6px;
+  visibility: hidden;
+}
+
+hr {
+  border: 0;
+  border-bottom: 1px dashed #ccc;
+  background: #999;
+}
+
+h2 .anchor {
+  visibility: hidden;
+}
+
+h2:hover .anchor {
+  visibility: visible;
+}
+
 img {
   max-width: 100%;
   display: block;
