--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,8 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  background-color: var(--bg-color);
+  color: var(--on-background);
 }
 
 * {
@@ -18,6 +20,7 @@ h4,
 h5 {
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
+  color: var(--heading-color);
 }
 
 strong {
@@ -47,7 +50,7 @@ td {
 /* for image caption */
 img + em {
   margin-top: 0.5em;
-  color: dimgrey;
+  color: lightslategray;
   font-style: normal;
   display: inherit;
   text-align: center;
@@ -57,7 +60,7 @@ img + em {
 /* for table caption */
 table + p {
   margin-top: 0.5em;
-  color: dimgrey;
+  color: lightslategray;
   font-style: normal;
   display: inherit;
   text-align: center;
@@ -67,21 +70,23 @@ table + p {
 blockquote {
   margin: 1em 0;
   padding: 0.75rem 1rem;
-  background: #ebf6ff;
-  border-left: 0.3rem solid #5aa8ff;
+  background: var(--surface-color);
+  color: var(--on-surface);
+  border-left: 0.3rem solid var(--primary-variant);
 }
 
 a {
-  color: #007faa;
+  color: var(--primary-color);
   text-decoration: none;
 }
 
 a:hover {
+  color: var(--secondary-color);
   text-decoration: underline;
 }
 
 .anchor {
-  stroke: #007faa;
+  stroke: var(--primary-color);
   margin-left: -26px;
   padding-right: 6px;
   visibility: hidden;
@@ -99,9 +104,39 @@ h2 .anchor {
 
 h2:hover .anchor {
   visibility: visible;
+  stroke: var(--secondary-color);
 }
 
 img {
   max-width: 100%;
   display: block;
+}
+
+:root {
+  color-scheme: light dark;
+  --primary-color: #05668d;
+  --primary-variant: #033d55;
+  --secondary-color: #02c39a;
+  --secondary-variant: #01755c;
+  --on-primary: #e6f0f4;
+  --on-secondary: #424242;
+  --on-background: #424242;
+  --on-surface: #424242;
+  --bg-color: #fff;
+  --surface-color: #e6f0f4;
+  --heading-color: #292922;
+}
+
+[data-theme='dark'] {
+  --primary-color: #5094af;
+  --primary-variant: #e6f0f4;
+  --secondary-color: #01755c;
+  --secondary-variant: #02c39a;
+  --on-primary: #e6f0f4;
+  --on-secondary: #424242;
+  --on-background: #fff;
+  --on-surface: #fff;
+  --bg-color: #021f2a;
+  --surface-color: #022e3f;
+  --heading-color: #c1d9e3;
 }
