--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -8,17 +8,29 @@
   width: 100%;
 }
 
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
 .navHomeLink {
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
+  font-size: 18px;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.table {
+  display: flex;
+  align-items: center;
 }
 
 .navLinks {
-  align-self: flex-end;
   list-style-type: none;
+}
+
+.navLinksItem {
+  display: inline-block;
+  font-size: 16px;
+  padding: 0;
 }
