--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,6 +57,15 @@ img + em {
   font-size: 85%;
 }
 
+.media-wrapper + em {
+  margin-top: 0.5em;
+  color: lightslategray;
+  font-style: normal;
+  display: inherit;
+  text-align: center;
+  font-size: 85%;
+}
+
 /* for table caption */
 table + p {
   margin-top: 0.5em;
