Refactor Page Structure + New Home
This is a major commit I wouldn't do at work, but since this
is a project only I contribute to :shrug: let's doeit!

--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -1,4 +1,30 @@
-.footer {
-  margin-top: 4.5rem;
-  padding-top: 1.75rem;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.about {
+  text-align: center;
+}
+
+.about h2 {
+  font-size: 1.2rem;
+  font-weight: normal;
+}
+
+.avatar {
+  width: 100%;
+}
+
+.thumb {
+  width: 5rem;
+  border-radius: 50%;
+  display: inline;
+}
+
+.form {
+  margin-top: 2rem;
 }
